adds fix